--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Student Club Website">
+    <meta name="author" content="Ada's Team">
 
-    <title>Simple Sidebar - Start Bootstrap Template</title>
+    <title>Ada's Team</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -20,36 +20,42 @@
 
 <body>
 
-    <div id="wrapper">
+    <div id="wrapper" class="toggled">
 
         <!-- Sidebar -->
         <div id="sidebar-wrapper">
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
                     <a href="#">
-                        Start Bootstrap
+                        Ada's Team
                     </a>
                 </li>
                 <li>
-                    <a href="#">Dashboard</a>
+                    <a href="#">Home</a>
                 </li>
                 <li>
-                    <a href="#">Shortcuts</a>
+                    <a href="#">Tutoring</a>
                 </li>
                 <li>
-                    <a href="#">Overview</a>
+                    <a href="#">Executives</a>
                 </li>
                 <li>
-                    <a href="#">Events</a>
+                    <a href="#">Resources</a>
                 </li>
                 <li>
-                    <a href="#">About</a>
+                    <a href="#">Scholarships</a>
                 </li>
                 <li>
-                    <a href="#">Services</a>
+                    <a href="#">Contact Us</a>
                 </li>
                 <li>
-                    <a href="#">Contact</a>
+                    <a href="#">Sign Up</a>
+                </li>
+                <li>
+                    <a href="#">Find us on...</a>
+                </li>
+                <li>
+                    <a href="#">Blog</a>
                 </li>
             </ul>
         </div>
@@ -58,9 +64,10 @@
         <!-- Page Content -->
         <div id="page-content-wrapper">
             <div class="container-fluid">
-                <h1>Simple Sidebar</h1>
-                <p>This template has a responsive menu toggling system. The menu will appear collapsed on smaller screens, and will appear non-collapsed on larger screens. When toggled using the button below, the menu will appear/disappear. On small screens, the page content will be pushed off canvas.</p>
-                <p>Make sure to keep all page content within the <code>#page-content-wrapper</code>.</p>
+                <h1 class="ada-title">Simple Sidebar</h1>
+                <img src="img/head.png" class="ada-head"></img>
+                </br>
+                <p class="ada-paragraph">This template has a responsive menu toggling system. The menu will appear collapsed on smaller screens, and will appear non-collapsed on larger screens. When toggled using the button below, the menu will appear/disappear. On small screens, the page content will be pushed off canvas. Make sure to keep all page content within the <code>#page-content-wrapper</code>.</p>
                 <a href="#menu-toggle" class="btn btn-secondary" id="menu-toggle">Toggle Menu</a>
             </div>
         </div>
