--- a/pages/resources.html
+++ b/pages/resources.html
@@ -1,3 +1,8 @@
 <div class="container-fluid">
     <h1 class="ada-title">Resources</h1>
+    <p class="ada-paragraph">Diversity Focused University of Alberta Student Groups</p>
+
+The Landing  – A student space for gender and sexual diversity
+OUTreach – The U of A’s queer social group
+FUA (Feminists at the University of Alberta) – An attempt to create a unified group for feminism on campus.
 </div>
