--- a/pages/home.html
+++ b/pages/home.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
     <h1 class="ada-title">Simple Sidebar</h1>
     <img src="img/head.png" class="ada-head"></img>
-    </br>
-    <p class="ada-paragraph">This template has a responsive menu toggling system. The menu will appear collapsed on smaller screens, and will appear non-collapsed on larger screens. When toggled using the button below, the menu will appear/disappear. On small screens, the page content will be pushed off canvas. Make sure to keep all page content within the <code>#page-content-wrapper</code>.</p>
+    <br/>
+    <p class="ada-paragraph">this is where more text goes</p>
 </div>
