adding the calendar

--- a/pages/tutoring.html
+++ b/pages/tutoring.html
@@ -1,5 +1,41 @@
 <div class="container-fluid">
+    <h1 class="ada-title">Office hours</h1>
+    <p class="ada-paragraph">
+        Office hours are where Ada's Team volunteers will sit in the room and make sure it is open so YOU can use it!
+        You can:</p>
+    <ul>
+        <li class="ada-list-item">Recharge in comfortable environment</li>
+        <li class="ada-list-item">Meet new people who care about diversity in our department</li>
+        <li class="ada-list-item">Visit and hangout</li>
+        <li class="ada-list-item">Have a cup of tea</li>
+        <li class="ada-list-item">Read a zine or book (from our tiny Library)</li>
+        <li class="ada-list-item">Plan a diversity focused event</li>
+        <li class="ada-list-item">Please note that the office will be unavailable for general hangouts during any official tutoring sessions being held in the office.</li>
+    </ul>
+    <p class="ada-paragraph space left">Office hours are shown below in</p> <p class=" ada-paragrph ada-blue">blue.</p>
+
+
+
     <h1 class="ada-title">Tutoring</h1>
-    <img src="img/head.png" class="ada-head"></img>
-    </br>
-    <p class="ada-paragraph">this is where we will put our tutoring</p>
+    <p class="ada-paragraph"> Looking for a tutor? Ada’s Team has some members who are willing to help!
+        We are committed to providing a safe space for students, so if you have any particular tutoring requirements,
+        send us an email at adasteam@ualberta.ca. We will do our best to accommodate. Volunteer tutors are here to help you…</p>
+    <ul>
+        <li class="ada-list-item">Understand computing related concepts</li>
+        <li class="ada-list-item">Develop debugging skills</li>
+        <li class="ada-list-item">Apply good coding practices</li>
+    </ul>
+    <p class="ada-paragraph">Please keep the following in mind:</p>
+    <ul>
+        <li class="ada-list-item">Tutoring hours are run by volunteers</li>
+        <li class="ada-list-item">Tutoring hours are drop–in</li>
+        <li class="ada-list-item">It is not reasonable to expect that volunteer tutors will look over your code ahead of their tutoring hour</li>
+    </ul>
+    <p class="ada-paragraph space">Click on tutoring sessions to see what course(s) help will be provided for.
+        Volunteer tutors provide help in Ada’s Base, CSC 1-24.</p>
+    <p class="ada-paragraph space left">Volunteer tutoring hours are shown below in</p>
+    <p class="ada-paragrph ada-purple">purple.</p>
+
+
+    <iframe src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showPrint=0&amp;showCalendars=0&amp;mode=WEEK&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=astarlovelace%40gmail.com&amp;color=%232952A3&amp;src=v9j8ohim8qc5g8af4bfm5409ac%40group.calendar.google.com&amp;color=%2342104A&amp;ctz=America%2FEdmonton" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+</div>
