--- a/pages/executives.html
+++ b/pages/executives.html
@@ -4,27 +4,27 @@
     <p class="ada-paragraph">The Ada’s Team executive committee is elected every April.
         The following are the committee members for the 2018-19 academic year:</p>
         <br/>
-        <p class="ada-paragraph-bold">President:</p>
+        <p class="ada-paragraph bold">President:</p>
         <p class="ada-paragraph">Mandy Meindersma</p>
-        <p class="ada-paragraph-bold">VP Admin:</p>
+        <p class="ada-paragraph bold">VP Admin:</p>
         <p class="ada-paragraph">Chelsea Hong</p>
-        <p class="ada-paragraph-bold">VP Finance:</p>
+        <p class="ada-paragraph bold">VP Finance:</p>
         <p class="ada-paragraph">Bennett Hreherchuck</p>
-        <p class="ada-paragraph-bold">VP Events:</p>
+        <p class="ada-paragraph bold">VP Events:</p>
         <p class="ada-paragraph">Rex Xiang</p>
-        <p class="ada-paragraph-bold">VP Promotions:</p>
+        <p class="ada-paragraph bold">VP Promotions:</p>
         <p class="ada-paragraph">Diane Boytang</p>
-        <p class="ada-paragraph-bold">VP Outreach External:</p>
+        <p class="ada-paragraph bold">VP Outreach External:</p>
         <p class="ada-paragraph">Ashley Holgate</p>
-        <p class="ada-paragraph-bold">VP Outreach Internal:</p>
+        <p class="ada-paragraph bold">VP Outreach Internal:</p>
         <p class="ada-paragraph">Vacant</p>
-        <p class="ada-paragraph-bold">VP Conference External:</p>
+        <p class="ada-paragraph bold">VP Conference External:</p>
         <p class="ada-paragraph">Helen Gezahegn</p>
-        <p class="ada-paragraph-bold">VP Conference Internal:</p>
+        <p class="ada-paragraph bold">VP Conference Internal:</p>
         <p class="ada-paragraph">Vacant</p>
-        <p class="ada-paragraph-bold">VP Conference Finance:</p>
+        <p class="ada-paragraph bold">VP Conference Finance:</p>
         <p class="ada-paragraph">Amy Xiang</p>
-        <p class="ada-paragraph-bold">Mascot:</p>
+        <p class="ada-paragraph bold">Mascot:</p>
         <p class="ada-paragraph">Ada Bot</p>
 
 </div>
