--- a/pages/tutoring.html
+++ b/pages/tutoring.html
@@ -19,7 +19,7 @@
     <h1 class="ada-title">Tutoring</h1>
     <p class="ada-paragraph"> Looking for a tutor? Ada’s Team has some members who are willing to help!
         We are committed to providing a safe space for students, so if you have any particular tutoring requirements,
-        send us an email at adasteam@ualberta.ca. We will do our best to accommodate. Volunteer tutors are here to help you…</p>
+        send us an email at adasteam@ualberta.ca. We will do our best to accommodate. Volunteer tutors can help you…</p>
     <ul>
         <li class="ada-list-item">Understand computing related concepts</li>
         <li class="ada-list-item">Develop debugging skills</li>
@@ -32,7 +32,8 @@
         <li class="ada-list-item">It is not reasonable to expect that volunteer tutors will look over your code ahead of their tutoring hour</li>
     </ul>
     <p class="ada-paragraph space">Click on tutoring sessions to see what course(s) help will be provided for.
-        Volunteer tutors provide help in Ada’s Base, CSC 1-24.</p>
+        Volunteer tutors provide help in Ada’s Base, CSC 1-24.
+        If you would like to become an Ada's Team tutor send us an email at adasteam@ualberta.ca!</p>
     <p class="ada-paragraph space left">Volunteer tutoring hours are shown below in</p>
     <p class="ada-paragrph ada-purple">purple.</p>
 
