fixing img link

--- a/pages/home.html
+++ b/pages/home.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-    <img src="img/banner.png" class="banner"></img>
+    <img src="img/banner.PNG" class="banner"></img>
     <br/>
     <p class="ada-paragraph space">We respectfully acknowledge that Ada’s Team is located on Treaty 6 territory,
         a traditional gathering place for diverse Indigenous peoples including the
