fixing most mobile issues, adding blog, adding contact us links, fixing resizing issues, fixing bad text on home page

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Student Club Website">
+    <meta name="description" content="Ada's Team Website">
     <meta name="author" content="Ada's Team">
     <!--favicon-->
 	<link rel="icon" href="/img/head-square.png">
@@ -51,7 +51,7 @@
                     <a id="contact-us" href="#contact-us">Contact Us</a>
                 </li>
                 <li>
-                    <a id="blog" href="#">Blog</a>
+                    <a id="blog" href="#blog">Blog</a>
                 </li>
             </ul>
         </div>
