--- a/pages/blog.html
+++ b/pages/blog.html
@@ -1,3 +1,39 @@
 <div class="container-fluid">
     <h1 class="ada-title">Blog</h1>
+
+    <!-- menu -->
+    <ul class="ada-blog-menu">
+        <li class="ada-list-item"><a href=#Feb2018>February 2018</a></li>
+        <li class="ada-list-item"><a href=#Feb2018>January 2017</a></li>
+        <li class="ada-list-item"><a href=#Feb2018>November 2014</a></li>
+        <li class="ada-list-item"><a href=#Feb2018>October 2013</a></li>
+    </ul>
+
+    <!-- these are the blogs -->
+    <div>
+        <img src="img/head-square.png" class="ada-blog-pic left">
+        <h4 class="ada-title">Blog title</h4>
+        <p class="ada-paragraph"> January 18th 2018</p>
+        <p class="ada-paragraph">
+            a lot of text herekjshfkjhsdkjhxkjsdhkjh
+            djkhgfiejkhdsfhdskjhfdjkhg
+            asdkjfhvkdjhgkjdhgjkdhgakjhds
+            akdshgkfjdhgkjhfdgkjhfkjghfjkhg'
+            dkfhgkjhfdkjhgfkjhgkjfhgjkhjkfghkj
+        </p>
+    </div>
+    <hr/>
+    <div>
+        <img src="img/head-square.png" class="ada-blog-pic left">
+        <h4 class="ada-title">Blog title</h4>
+        <p class="ada-paragraph"> January 18th 2018</p>
+        <p class="ada-paragraph">
+            a lot of text herekjshfkjhsdkjhxkjsdhkjh
+            djkhgfiejkhdsfhdskjhfdjkhg
+            asdkjfhvkdjhgkjdhgjkdhgakjhds
+            akdshgkfjdhgkjhfdgkjhfkjghfjkhg'
+            dkfhgkjhfdkjhgfkjhgkjfhgjkhjkfghkj
+        </p>
+    </div>
+    <hr/>
 </div>
