--- a/pages/contact-us.html
+++ b/pages/contact-us.html
@@ -1,3 +1,40 @@
 <div class="container-fluid">
     <h1 class="ada-title">Contact Us</h1>
+    <div class="ada-link-wrapper left">
+        <a href="github-link" class="ada-link-wrapper">
+            <img src="img/head-square.png" class="ada-link">
+            <p class="ada-paragraph center">Github</p>
+        </a>
+    </div>
+    <div class="ada-link-wrapper left">
+        <a href="github-link" class="ada-link-wrapper">
+            <img src="img/head-square.png" class="ada-link">
+            <p class="ada-paragraph center">Github</p>
+        </a>
+    </div>
+    <div class="ada-link-wrapper left">
+        <a href="github-link" class="ada-link-wrapper">
+            <img src="img/head-square.png" class="ada-link">
+            <p class="ada-paragraph center">Github</p>
+        </a>
+    </div>
+    <div class="ada-link-wrapper left">
+        <a href="github-link" class="ada-link-wrapper">
+            <img src="img/head-square.png" class="ada-link">
+            <p class="ada-paragraph center">Github</p>
+        </a>
+    </div>
+    <div class="ada-link-wrapper left">
+        <a href="github-link" class="ada-link-wrapper">
+            <img src="img/head-square.png" class="ada-link">
+            <p class="ada-paragraph center">Github</p>
+        </a>
+    </div>
+    <div class="ada-link-wrapper left">
+        <a href="github-link" class="ada-link-wrapper">
+            <img src="img/head-square.png" class="ada-link">
+            <p class="ada-paragraph center">Github</p>
+        </a>
+    </div>
+
 </div>
