--- a/pages/home.html
+++ b/pages/home.html
@@ -1,4 +1,6 @@
 <div class="container-fluid">
+    <h1 class="ada-title">Ada's Team</h1>
+    <p class="ada-paragraph space">Supporting diversity in computing, games, and technology at the University of Alberta</p>
     <img src="img/banner.PNG" class="banner"></img>
     <br/>
     <p class="ada-paragraph space">We respectfully acknowledge that Ada’s Team is located on Treaty 6 territory,
