--- a/pages/tutoring.html
+++ b/pages/tutoring.html
@@ -38,5 +38,5 @@
     <p class="ada-paragrph ada-purple">purple.</p>
 
 
-    <iframe src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showPrint=0&amp;showCalendars=0&amp;mode=WEEK&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=astarlovelace%40gmail.com&amp;color=%232952A3&amp;src=v9j8ohim8qc5g8af4bfm5409ac%40group.calendar.google.com&amp;color=%2342104A&amp;ctz=America%2FEdmonton" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+    <iframe src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showPrint=0&amp;showCalendars=0&amp;mode=WEEK&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=astarlovelace%40gmail.com&amp;color=%232952A3&amp;src=v9j8ohim8qc5g8af4bfm5409ac%40group.calendar.google.com&amp;color=%2342104A&amp;ctz=America%2FEdmonton" style="border-width:0; width:inherit" height="600" frameborder="0" scrolling="no"></iframe>
 </div>
