adding the contact us photos and links

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-    <h1 class="ada-title">Blog</h1>
+    <h1 class="ada-title">Blog - More coming soon</h1>
 
     <!-- menu -->
     <ul class="ada-blog-menu">
