--- a/pages/contact-us.html
+++ b/pages/contact-us.html
@@ -1,40 +1,38 @@
 <div class="container-fluid">
     <h1 class="ada-title">Contact Us</h1>
+    <p class="ada-paragraph left"> E-mail us if you have any questions:
+        <a href="mailto:adasteam@ualberta.ca">
+            <p class="ada-paragraph">adasteam@ualberta.ca</p>
+        </a>
+    </p>
     <div class="ada-link-wrapper left">
-        <a href="github-link" class="ada-link-wrapper">
-            <img src="img/head-square.png" class="ada-link">
-            <p class="ada-paragraph center">Github</p>
+        <a href="https://github.com/adas-team" class="ada-link-wrapper">
+            <img src="img/github.svg" class="ada-link">
+            <p class="ada-paragraph center">GitHub</p>
         </a>
     </div>
     <div class="ada-link-wrapper left">
-        <a href="github-link" class="ada-link-wrapper">
-            <img src="img/head-square.png" class="ada-link">
-            <p class="ada-paragraph center">Github</p>
+        <a href="https://www.facebook.com/astarlovelace/" class="ada-link-wrapper">
+            <img src="img/facebook.png" class="ada-link">
+            <p class="ada-paragraph center">Facebook</p>
         </a>
     </div>
     <div class="ada-link-wrapper left">
-        <a href="github-link" class="ada-link-wrapper">
-            <img src="img/head-square.png" class="ada-link">
-            <p class="ada-paragraph center">Github</p>
+        <a href="https://www.instagram.com/adas_team/" class="ada-link-wrapper">
+            <img src="img/insta.png" class="ada-link">
+            <p class="ada-paragraph center">Instagram</p>
         </a>
     </div>
     <div class="ada-link-wrapper left">
-        <a href="github-link" class="ada-link-wrapper">
-            <img src="img/head-square.png" class="ada-link">
-            <p class="ada-paragraph center">Github</p>
+        <a href="https://www.pinterest.ca/astarteam/" class="ada-link-wrapper">
+            <img src="img/pinterest.png" class="ada-link">
+            <p class="ada-paragraph center">Pinterest</p>
         </a>
     </div>
     <div class="ada-link-wrapper left">
-        <a href="github-link" class="ada-link-wrapper">
-            <img src="img/head-square.png" class="ada-link">
-            <p class="ada-paragraph center">Github</p>
+        <a href="http://adasteam.tumblr.com/" class="ada-link-wrapper">
+            <img src="img/tumbler.png" class="ada-link">
+            <p class="ada-paragraph center">Tumblr</p>
         </a>
     </div>
-    <div class="ada-link-wrapper left">
-        <a href="github-link" class="ada-link-wrapper">
-            <img src="img/head-square.png" class="ada-link">
-            <p class="ada-paragraph center">Github</p>
-        </a>
-    </div>
-
 </div>
