actually fixing mobile issues now lol

--- a/pages/tutoring.html
+++ b/pages/tutoring.html
@@ -35,8 +35,9 @@
         Volunteer tutors provide help in Ada’s Base, CSC 1-24.
         If you would like to become an Ada's Team tutor send us an email at adasteam@ualberta.ca!</p>
     <p class="ada-paragraph space left">Volunteer tutoring hours are shown below in</p>
-    <p class="ada-paragrph ada-purple">purple.</p>
+    <p class="ada-paragrph ada-pink">pink.</p>
 
 
-    <iframe src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showPrint=0&amp;showCalendars=0&amp;mode=WEEK&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=astarlovelace%40gmail.com&amp;color=%232952A3&amp;src=v9j8ohim8qc5g8af4bfm5409ac%40group.calendar.google.com&amp;color=%2342104A&amp;ctz=America%2FEdmonton" style="border-width:0; width:inherit" height="600" frameborder="0" scrolling="no"></iframe>
+    <iframe class="ada-big-calendar" src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showPrint=0&amp;showCalendars=0&amp;mode=WEEK&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=astarlovelace%40gmail.com&amp;color=%23060D5E&amp;src=v9j8ohim8qc5g8af4bfm5409ac%40group.calendar.google.com&amp;color=%23B1365F&amp;ctz=America%2FEdmonton" style="border-width:0;" width="640" height="600" frameborder="0" scrolling="no"></iframe>
+    <iframe class="ada-small-calendar" src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showNav=0&amp;showPrint=0&amp;showCalendars=0&amp;mode=AGENDA&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=astarlovelace%40gmail.com&amp;color=%23060D5E&amp;src=v9j8ohim8qc5g8af4bfm5409ac%40group.calendar.google.com&amp;color=%23B1365F&amp;ctz=America%2FEdmonton" style="border-width:0" width="300" height="600" frameborder="0" scrolling="no"></iframe>
 </div>
