fixing more mobile issues, making exec tab cleaner, make the colored words in tutor section better, fixed scrolling for pages

--- a/index.html
+++ b/index.html
@@ -76,68 +76,86 @@
     // this if else allows the URL's to specify what tab you want to see
     if(hash == "#tutoring") {
         $('#page-content-wrapper').load('pages/tutoring.html');
+        $(window).scrollTop(0);
     }
     else if(hash == "#executives") {
     	$('#page-content-wrapper').load('pages/executives.html');
+        $(window).scrollTop(0);
     }
     else if(hash == "#resources") {
     	$('#page-content-wrapper').load('pages/resources.html');
+        $(window).scrollTop(0);
     }
     else if(hash == "#scholarships") {
         $('#page-content-wrapper').load('pages/scholarships.html');
+        $(window).scrollTop(0);
     }
     else if(hash == "#contact-us") {
     	$('#page-content-wrapper').load('pages/contact-us.html');
+        $(window).scrollTop(0);
     }
     else if(hash == "#sign-up") {
     	$('#page-content-wrapper').load('pages/sign-up.html');
+        $(window).scrollTop(0);
     }
     else if(hash == "#find-us-on") {
     	$('#page-content-wrapper').load('pages/find-us-on.html');
+        $(window).scrollTop(0);
     }
     else if(hash == "#blog") {
         $('#page-content-wrapper').load('pages/blog.html');
+        $(window).scrollTop(0);
     }
     else {
     	$('#page-content-wrapper').load('pages/home.html');
+        $(window).scrollTop(0);
     }
 
 
 
     $('#home').click(function() {
         $('#page-content-wrapper').load('pages/home.html');
+        $(window).scrollTop(0);
     });
 
     $('#tutoring').click(function() {
         $('#page-content-wrapper').load('pages/tutoring.html');
+        $(window).scrollTop(0);
     });
 
     $('#executives').click(function() {
         $('#page-content-wrapper').load('pages/executives.html');
+        $(window).scrollTop(0);
     });
 
     $('#resources').click(function() {
         $('#page-content-wrapper').load('pages/resources.html');
+        $(window).scrollTop(0);
     });
 
     $('#scholarships').click(function() {
         $('#page-content-wrapper').load('pages/scholarships.html');
+        $(window).scrollTop(0);
     });
 
     $('#contact-us').click(function() {
         $('#page-content-wrapper').load('pages/contact-us.html');
+        $(window).scrollTop(0);
     });
 
     $('#sign-up').click(function() {
         $('#page-content-wrapper').load('pages/sign-up.html');
+        $(window).scrollTop(0);
     });
 
     $('#find-us-on').click(function() {
         $('#page-content-wrapper').load('pages/find-us-on.html');
+        $(window).scrollTop(0);
     });
 
     $('#blog').click(function() {
         $('#page-content-wrapper').load('pages/blog.html');
+        $(window).scrollTop(0);
     });
     </script>
 
