--- a/pages/tutoring.html
+++ b/pages/tutoring.html
@@ -12,7 +12,9 @@
         <li class="ada-list-item">Plan a diversity focused event</li>
         <li class="ada-list-item">Please note that the office will be unavailable for general hangouts during any official tutoring sessions being held in the office.</li>
     </ul>
-    <p class="ada-paragraph space left">Office hours are shown below in</p> <p class=" ada-paragrph ada-blue">blue.</p>
+    <p class="ada-paragraph left space">Office hours are shown below in
+        <span class="ada-paragrph ada-blue">blue.</span>
+    </p>
 
 
 
@@ -34,8 +36,9 @@
     <p class="ada-paragraph space">Click on tutoring sessions to see what course(s) help will be provided for.
         Volunteer tutors provide help in Ada’s Base, CSC 1-24.
         If you would like to become an Ada's Team tutor send us an email at adasteam@ualberta.ca!</p>
-    <p class="ada-paragraph space left">Volunteer tutoring hours are shown below in</p>
-    <p class="ada-paragrph ada-pink">pink.</p>
+    <p class="ada-paragraph left space">Volunteer tutoring hours are shown below in
+        <span class="ada-paragrph ada-pink">pink.</span>
+    </p>
 
 
     <iframe class="ada-big-calendar" src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showPrint=0&amp;showCalendars=0&amp;mode=WEEK&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=astarlovelace%40gmail.com&amp;color=%23060D5E&amp;src=v9j8ohim8qc5g8af4bfm5409ac%40group.calendar.google.com&amp;color=%23B1365F&amp;ctz=America%2FEdmonton" style="border-width:0;" width="640" height="600" frameborder="0" scrolling="no"></iframe>
