--- a/pages/home.html
+++ b/pages/home.html
@@ -16,8 +16,8 @@
         social class and any other factor of discrimination or minority group.
         We want to create a safe space here at the University of Alberta.
     </p>
-    <h3 class="ada-paragraph resources">Here are some Frequently Asked Questions about our group:</h3>
-    <h5 class="ada-paragraph resources">Why are we called Ada’s Team?</h5>
+    <h3 class="ada-paragraph ada-faq">Here are some Frequently Asked Questions about our group:</h3>
+    <h5 class="ada-paragraph ada-faq">Why are we called Ada’s Team?</h5>
     <p class="ada-paragraph">Ada Lovelace (1815–1852) was a gifted mathematician,
         she is considered to have written instructions for the first computer program
         in the mid-1800s and therefore is known as the world’s first computer programmer.
@@ -25,35 +25,35 @@
         mathematics professor Charles Babbage, who had invented the Difference Engine,
         used Ada’s designs and write-up’s for the inner workings of the computer.
     </p>
-    <h5 class="ada-paragraph resources">What events does Ada’s Team do?</h5>
+    <h5 class="ada-paragraph ada-faq">What events does Ada’s Team do?</h5>
     <p class="ada-paragraph">We try to put on a variety of events! We do a lot of
         events throughout the year that promote early learning about computing
         science to those in high school. We try to go to a couple empowering conferences
         throughout the year. We hold a ton of small studying events as well where students
         have a safe space to meet others and have the opportunity to be themselves.
     </p>
-    <h5 class="ada-paragraph resources">How do I get more involved with Ada’s Team?</h5>
+    <h5 class="ada-paragraph ada-faq">How do I get more involved with Ada’s Team?</h5>
     <p class="ada-paragraph">Great question! Join our mailing list first! This is on the sign up tab.
         This will let you know about events and cool opportunities coming up.
         We love seeing new faces at our events, keep an eye on our emails, Facebook and
         posters around computing science for upcoming events.
     </p>
-    <h5 class="ada-paragraph resources">What can I do to help/volunteer with Ada’s Team?</h5>
+    <h5 class="ada-paragraph ada-faq">What can I do to help/volunteer with Ada’s Team?</h5>
     <p class="ada-paragraph">We always need volunteers for fun events/tutoring.
         We have a range of opportunities from teaching high school students,
         tutoring computing science courses and helping us carry over food for events.
         Please checkout the contact us form if you would like to help!
     </p>
-    <h5 class="ada-paragraph resources">Do you have to identify as female to be a member or on the executive?</h5>
+    <h5 class="ada-paragraph ada-faq">Do you have to identify as female to be a member or on the executive?</h5>
     <p class="ada-paragraph">Absolutely not! Ada’s Team welcomes any gender and would
         love to see more diversity in our members and executive.
     </p>
-    <h5 class="ada-paragraph resources">Where can I go if I have questions about 'insert topic here'?</h5>
+    <h5 class="ada-paragraph ada-faq">Where can I go if I have questions about 'insert topic here'?</h5>
     <p class="ada-paragraph">Check out our resources tab if you have any questions about
         diversity. If you can’t find what you are looking for use the
         contact us tab and shoot us an email!
     </p>
-    <h5 class="ada-paragraph resources">Where can I find the Ada’s Team constitution?</h5>
+    <h5 class="ada-paragraph ada-faq">Where can I find the Ada’s Team constitution?</h5>
     <p class="ada-paragraph">Head over to the University of Alberta clubs page called bearsden.
         There you can find all 400+ clubs at the university.
         Here is the link directly to Ada’s Team: <a href="https://alberta.campuslabs.ca/engage/organization/adasteam">here</a>
