--- a/pages/tutoring.html
+++ b/pages/tutoring.html
@@ -12,7 +12,7 @@
         <li class="ada-list-item">Plan a diversity focused event</li>
         <li class="ada-list-item">Please note that the office will be unavailable for general hangouts during any official tutoring sessions being held in the office.</li>
     </ul>
-    <p class="ada-paragraph left space">Office hours are shown below in
+    <p class="ada-paragraph left space width-100">Office hours are shown below in
         <span class="ada-paragrph ada-blue">blue.</span>
     </p>
 
@@ -36,7 +36,7 @@
     <p class="ada-paragraph space">Click on tutoring sessions to see what course(s) help will be provided for.
         Volunteer tutors provide help in Ada’s Base, CSC 1-24.
         If you would like to become an Ada's Team tutor send us an email at adasteam@ualberta.ca!</p>
-    <p class="ada-paragraph left space">Volunteer tutoring hours are shown below in
+    <p class="ada-paragraph left space width-100">Volunteer tutoring hours are shown below in
         <span class="ada-paragrph ada-pink">pink.</span>
     </p>
 
